crates/xlate/tests/snapshots/golden_matrix__gpt6_tools__gpt-6-astra__20260910__responses_to_chat__gpt5_responses.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-5.4",
  "messages": [
    {
      "role": "user",
      "content": "Weather in Paris? Use the tool."
    }
  ],
  "tools": [
    {
      "type": "function",
      "function": {
        "name": "get_weather",
        "description": "Get weather.",
        "parameters": {
          "additionalProperties": false,
          "properties": {
            "city": {
              "type": "string"
            }
          },
          "required": [
            "city"
          ],
          "type": "object"
        }
      }
    }
  ],
  "max_completion_tokens": 128
}
--- headers ---
upstream_streams: false
--- degraded ---
